--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title></title>
-		<link rel="stylesheet/less" type="text/css" href="style.less">
+		<link rel="stylesheet/less" type="text/css" href="../widgets.less">
 		<script src="less-1.2.1.min.js" type="text/javascript"></script>
 	</head>
 	<body>
