--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 		<link rel="stylesheet/less" type="text/css" href="../widgets.less">
-		<script src="../less-1.2.2.min.js" type="text/javascript"></script>
+		<script src="../less.js" type="text/javascript"></script>
 	</head>
 	<body>
 	
